error correction 2.0